# iggy_supporting_kafka

./: README.md
core/kafka_adapter/: Cargo.toml  DEPENDENCIES.md  Dockerfile  README.md  rust-toolchain.toml
core/kafka_adapter/bdd/go/tests/tcp_test/: partitions_steps.go
core/kafka_adapter/bdd/java/: Dockerfile
core/kafka_adapter/bdd/rust/tests/common/: mod.rs
core/kafka_adapter/core/ai/mcp/: Dockerfile
core/kafka_adapter/core/bench/dashboard/frontend/: Cargo.toml  index.dev.html
core/kafka_adapter/core/bench/dashboard/frontend/src/: main.rs  router.rs  version.rs
core/kafka_adapter/core/bench/dashboard/server/: Dockerfile
core/kafka_adapter/core/binary_protocol/src/: dispatch.rs
core/kafka_adapter/core/binary_protocol/src/consensus/: operation.rs
core/kafka_adapter/core/binary_protocol/src/primitives/: mod.rs  partition_assignment.rs
core/kafka_adapter/core/configs/src/configs_impl/: typed_env_provider.rs
core/kafka_adapter/core/metadata/: Cargo.toml
core/kafka_adapter/core/metadata/src/impls/: metadata.rs
core/kafka_adapter/core/metadata/src/stm/: snapshot.rs  stream.rs
core/kafka_adapter/core/partitions/src/: types.rs
core/kafka_adapter/core/server/: Dockerfile
core/kafka_adapter/core/shard/src/: lib.rs
core/kafka_adapter/foreign/csharp/Iggy_SDK/Configuration/: TlsConfiguration.cs
core/kafka_adapter/foreign/csharp/Iggy_SDK/Consumers/: AutoCommitMode.cs
core/kafka_adapter/scripts/dashboard/: run_dev.sh
core/kafka_adapter/src/: lib.rs
core/kafka_adapter/src/protocol/: api.rs  codec.rs
core/kafka_adapter/tests/: codec_tests.rs
(+94 files in other folders)
